src/test/ui/rfc-2093-infer-outlives/explicit-struct.stderr
error: rustc_outlives
  --> $DIR/explicit-struct.rs:4:1
   |
LL | / struct Foo<'b, U> { //~ ERROR rustc_outlives
LL | |     bar: Bar<'b, U>
LL | | }
   | |_^
   |
   = note: U : 'b

error: aborting due to previous error

